--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: go
 
 go:
   - "1.12.1"
+
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: curl -sL https://git.io/goreleaser | bash
+  on:
+    tags: true
+    condition: $TRAVIS_OS_NAME = linux
